# Audcalc

./: .gitignore  LICENSE-3RD-PARTY.txt  LICENSE.txt  README.md
CircuitPython/: Verify.py  screenTest.py
Enclosure/: elements.afdesign  frontplate.afdesign  frontplate_guide.afdesign  frontplate_inverted.afdesign
Enclosure/backplate/: backplate.kicad_pcb  fp-lib-table
Enclosure/frontplate/: audcom.afdesign  frontplate.kicad_pcb  frontplate.kicad_prl  frontplate.kicad_pro  generation_notes.txt  ~frontplate.kicad_pcb.lck
Enclosure/graphic_footprints/: back_silk.kicad_mod  copper.kicad_mod  mask.kicad_mod  silk.kicad_mod
Enclosure/printedParts/: BackEnclosure.3mf  BackEnclosure.FCStd  BackEnclosure.stl  Buttons.3mf  Buttons.stl  FrontEnclosure.3mf  FrontEnclosure.stl  baffles.FCStd  buttonSurround.step  lightsurroundtest.FCStd  lightsurroundtest.FCStd1  pipe.step  pipegrid.FCStd  pipegrid.step  printedParts-ButtonFrontExtrude-4.1-2.3.step  printedParts-ButtonFrontExtrude.step  printedParts.FCStd  printedParts.FCStd1
Firmware/: ADSREnvelope.h  AudioSampleAmen_165.h  AudioSampleSecondbloop.cpp  AudioSampleSecondbloop.h  AudioSampleSine440.cpp  AudioSampleSine440.h  CMakeLists.txt  Chorus.h  Delay.h  GlobalData.cc  GlobalData.h  GlobalData.pb.c  GlobalData.pb.h  GlobalData.proto  GlobalDataInternal.proto  GlobalDefines.h  GrooveBox.cc  GrooveBox.h  GrooveBoxTestUtils.cc  Instrument.cc  Instrument.h  Midi.cc  Midi.h  MidiParamMapper.cc  MidiParamMapper.h  ParamLockPool.cpp  ParamLockPool.h  ParamLockPoolInternal.pb.c  ParamLockPoolInternal.pb.cc  ParamLockPoolInternal.pb.h  ParamLockPoolInternal.proto  Reverb2.h  SampleFile.h  Serializer.cc  Serializer.h  SongData.cc  SongData.h  SongDataInternal.pb.c  SongDataInternal.pb.h  SongDataInternal.proto  (+67 more)
Firmware/TDM_main/: AudioSampleMug.cpp  AudioSampleMug.h  AudioSamplerSimple.cpp  AudioSamplerSimple.h  Channel.h  Matrix.cpp  Matrix.h  Pattern.h  Sampler.cpp  Sampler.h  Screen.h  Screen.ino  TDM_main.ino  io_interface.ino
Firmware/audio/: analog_oscillator.cc  analog_oscillator.h  braids.cc  digital_oscillator.cc  digital_oscillator.h  dsp.h  envelope.h  excitation.h  macro_oscillator.cc  macro_oscillator.h  pico-braids.cc  quantizer_scales.h  random.cc  random.h  resources.cc  resources.h  resources_compiler.py  settings.cc  settings.h  small_stmlib.h  svf.h
Firmware/audio/resources/: lookup_tables.py  resources.py  test_increments.py  waveforms.py
Firmware/lua-5.4.3/: CMakeLists.txt
Firmware/nanopb/generator-bin/google/_upb/: _message.cp37-win_amd64.pyd
Firmware/nanopb/generator-bin/proto/: nanopb_pb2.py
Firmware/resources/: characters.py  lookup_tables.py  test_increments.py  waveforms.py
Firmware/spiffs/: spiffs.h  spiffs_config.h
Firmware/wav2sketch/: AudioSampleAmen_165.cpp  AudioSampleAmen_165.h  AudioSampleSine440.cpp  AudioSampleSine440.h
Guide/: layout.afdesign
Hardware/audcalc/: ButtonsLEDS.kicad_sch  Power.kicad_sch  Power.sch  Screen.kicad_sch  Screen.sch  audcalc.kicad_pcb  audcalc.kicad_prl  audcalc.kicad_pro  audcalc.kicad_sch  audcalc.pro  audioMidi.kicad_sch  audioMidi.sch
Hardware/kicad_project/: ButtonsLEDS.kicad_sch  ButtonsLEDS.sch  PCB_NEW_PCB_2021-10-03.kicad_pcb  PCB_NEW_PCB_2021-10-03.kicad_prl  PCB_NEW_PCB_2021-10-03.kicad_pro  Power.kicad_sch  Power.sch  Screen.kicad_sch  Screen.sch  audioMidi.kicad_sch  audioMidi.sch  tdm_v6-cache.lib  tdm_v6.kicad_pcb  tdm_v6.kicad_prl  tdm_v6.kicad_pro  tdm_v6.kicad_sch  tdm_v6.pro  tdm_v6.sch  tlv320_test-cache.lib
Hardware/kicad_project/step/: RK10J1_E.STEP  Tactal Switch - SMD (6mmx 6mmx 7mm) - Marked.stp
Hardware/tdm_frontboard/: backDrawing.dxf  buttonLayout.py  customLibrary.lib  fp-lib-table  quick.blend  sym-lib-table  tdm_frontboard-cache.lib  tdm_frontboard.kicad_pcb  tdm_frontboard.pro  tdm_frontboard.sch
Hardware/tdm_mainboard/: fp-lib-table  sym-lib-table  tdm_mainboard-cache.lib  tdm_mainboard-eagle-import.lib  tdm_mainboard-rescue.lib  tdm_mainboard.kicad_pcb  tdm_mainboard.pro  tdm_mainboard.sch
Hardware/tdm_mainboard/Mylib/: BA1AAPC.kicad_mod  CMS-151135-078SP-67.kicad_mod  CMS-18138A-SP.kicad_mod  EC11J1524413_newPads.kicad_mod  NSH_Resistor.kicad_mod  PVA1.kicad_mod  R_Axial_DIN0204_L3.6mm_D1.6mm_P5.08mm_Horizontal.kicad_mod  Rotary_Encoder_PEC11R.kicad_mod  SGTL5000XNAA3R2-pcb-part-libraries.epw  SJ2-35043A-SMT-TR.lib  Teensy4.kicad_mod  audioStuff.lib  kmrtM24024.kicad_mod  sgtl5000.kicad_mod
Hardware/tdm_mainboard/bom/: ibom.html
Hardware/tdm_mainboard/mainboard/: tdm_mainboard-B_Cu.gbl  tdm_mainboard-B_Mask.gbs  tdm_mainboard-B_Paste.gbp  tdm_mainboard-B_SilkS.gbo  tdm_mainboard-Edge_Cuts.gm1  tdm_mainboard-F_Cu.gtl  tdm_mainboard-F_Mask.gts  tdm_mainboard-F_Paste.gtp  tdm_mainboard-F_SilkS.gto  tdm_mainboard.drl
Hardware/test_samd11/test_samd11/: D_0603_notext.kicad_mod  R_0603.kicad_mod  test_samd11-cache.lib  test_samd11.kicad_pcb  test_samd11.sch
Hardware/test_samd11/test_samd11/gerbers/: test_samd11-B_Cu.gbl  test_samd11-B_Mask.gbs  test_samd11-B_SilkS.gbo  test_samd11-Edge_Cuts.gm1  test_samd11-F_Cu.gtl  test_samd11-F_Mask.gts  test_samd11-F_SilkS.gto  test_samd11.drl
WebEditor/: app.js  index.html
